WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232948
Infinite recursion under InjectedBundlePage::exitFullScreenForElement()
https://bugs.webkit.org/show_bug.cgi?id=232948
Summary
Infinite recursion under InjectedBundlePage::exitFullScreenForElement()
Jer Noble
Reported
2021-11-10 09:38:49 PST
Infinite recursion under InjectedBundlePage::exitFullScreenForElement()
Attachments
Patch
(6.90 KB, patch)
2021-11-10 09:52 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.87 KB, patch)
2021-11-10 14:55 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-11-10 09:51:31 PST
<
rdar://80588375
>
Jer Noble
Comment 2
2021-11-10 09:52:03 PST
Created
attachment 443824
[details]
Patch
Eric Carlson
Comment 3
2021-11-10 11:05:05 PST
Comment on
attachment 443824
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=443824&action=review
> Tools/ChangeLog:12 > + () or WKBundlePageWillDidFullScreen(), this call will recurse into
Nit: "()" should be on the previous line
Jer Noble
Comment 4
2021-11-10 14:55:53 PST
Created
attachment 443868
[details]
Patch for landing
EWS
Comment 5
2021-11-11 11:07:18 PST
Committed
r285643
(
244144@main
): <
https://commits.webkit.org/244144@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443868
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug